tests/expectations/compiler/core/algorithms/pedersen64_hash_to_address.out
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:26:26
     |
  26 |         let a: address = Pedersen64::hash_to_address(bool_value);
     |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:27:26
     |
  27 |         let b: address = Pedersen64::hash_to_address(bool_value);
     |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:28:26
     |
  28 |         let c: address = Pedersen64::hash_to_address(bool_value);
     |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:29:26
     |
  29 |         let d: address = Pedersen64::hash_to_address(bool_value);
     |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:30:26
     |
  30 |         let e: address = Pedersen64::hash_to_address(i8_value);
     |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:31:26
     |
  31 |         let f: address = Pedersen64::hash_to_address(i16_value);
     |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:32:26
     |
  32 |         let g: address = Pedersen64::hash_to_address(i32_value);
     |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:33:26
     |
  33 |         let i: address = Pedersen64::hash_to_address(u8_value);
     |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:34:26
     |
  34 |         let j: address = Pedersen64::hash_to_address(u16_value);
     |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:35:26
     |
  35 |         let k: address = Pedersen64::hash_to_address(u32_value);
     |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:36:26
     |
  36 |         let m: address = Pedersen64::hash_to_address(bool_value);
     |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:38:26
     |
  38 |         let n: address = Pedersen64::hash_to_address(bool_value);
     |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
